[package]
name = "collab-plugins-core"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs.workspace = true
collab = { workspace = true }
collab-entity = { workspace = true }

futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.26.0", features = ["sync", "rt"] }
tracing.workspace = true
parking_lot.workspace = true
anyhow.workspace = true

tokio-retry = "0.3"
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
similar = { version = "2.2.1" }
tokio-stream = { version = "0.1.14", features = ["sync"] }
uuid = { version = "1.3.3", features = ["v4"] }
bytes.workspace = true
rand = { version = "0.8", optional = true }
lazy_static = "1.4.0"
rocksdb = { version = "0.21.0", optional = true, default-features = false, features = ["zstd"] }
smallvec = { version = "1.10", features = ["write", "union", "const_generics", "const_new"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
bincode = "1.3.3"

[features]
default = []
rocksdb_plugin = ["rocksdb"]
postgres_plugin = ["rand", "rocksdb_plugin"]